.metadata/.plugins/org.eclipse.cdt.ui/PC01-2.build.log
09:25:47 **** Build of configuration Debug for project PC01-2 ****
make all 
Building file: ../mc.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"mc.d" -MT"mc.d" -o "mc.o" "../mc.c"
../mc.c: In function ‘main’:
../mc.c:37:22: error: invalid operands to binary % (have ‘double’ and ‘double’)
   printf("%f\n", op1 % op2);
                      ^
../mc.c:42:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [mc.o] Error 1

09:25:48 Build Finished (took 413ms)

